--- a/dev/tasks/tasks.yml
+++ b/dev/tasks/tasks.yml
@@ -250,7 +250,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.linux.yml
     params:
-      config: linux_64_cuda_compiler_versionNoneopenssl3
+      config: linux_64_cuda_compiler_versionNone
       r_config: linux_64_r_base4.1
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
@@ -260,7 +260,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.linux.yml
     params:
-      config: linux_64_cuda_compiler_versionNoneopenssl3
+      config: linux_64_cuda_compiler_versionNone
       r_config: linux_64_r_base4.2
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
@@ -270,7 +270,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.linux.yml
     params:
-      config: linux_64_cuda_compiler_versionNoneopenssl3
+      config: linux_64_cuda_compiler_versionNone
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
       - pyarrow-{no_rc_version}-py38(h[a-z0-9]+)_0_cpu.conda
@@ -282,7 +282,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.linux.yml
     params:
-      config: linux_64_cuda_compiler_version10.2openssl3
+      config: linux_64_cuda_compiler_version10.2
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cuda.conda
       - pyarrow-{no_rc_version}-py38(h[a-z0-9]+)_0_cuda.conda
@@ -296,7 +296,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.linux.yml
     params:
-      config: linux_aarch64_cuda_compiler_versionNoneopenssl3
+      config: linux_aarch64_cuda_compiler_versionNone
       r_config: linux_aarch64_r_base4.1
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
@@ -306,7 +306,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.linux.yml
     params:
-      config: linux_aarch64_cuda_compiler_versionNoneopenssl3
+      config: linux_aarch64_cuda_compiler_versionNone
       r_config: linux_aarch64_r_base4.2
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
@@ -316,7 +316,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.linux.yml
     params:
-      config: linux_aarch64_cuda_compiler_versionNoneopenssl3
+      config: linux_aarch64_cuda_compiler_versionNone
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
       - pyarrow-{no_rc_version}-py38(h[a-z0-9]+)_0_cpu.conda
@@ -330,7 +330,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.linux.yml
     params:
-      config: linux_ppc64le_cuda_compiler_versionNoneopenssl3
+      config: linux_ppc64le_cuda_compiler_versionNone
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
       - pyarrow-{no_rc_version}-py38(h[a-z0-9]+)_0_cpu.conda
@@ -344,7 +344,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.osx.yml
     params:
-      config:  osx_64_openssl3
+      config:  osx_64_
       r_config: osx_64_r_base4.1
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
@@ -354,7 +354,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.osx.yml
     params:
-      config: osx_64_openssl3
+      config: osx_64_
       r_config: osx_64_r_base4.2
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
@@ -364,7 +364,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.osx.yml
     params:
-      config: osx_64_openssl3
+      config: osx_64_
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
       - pyarrow-{no_rc_version}-py38(h[a-z0-9]+)_0_cpu.conda
@@ -378,7 +378,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.osx.yml
     params:
-      config: osx_arm64_openssl3
+      config: osx_arm64_
       r_config: osx_arm64_r_base4.1
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
@@ -388,7 +388,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.osx.yml
     params:
-      config: osx_arm64_openssl3
+      config: osx_arm64_
       r_config: osx_arm64_r_base4.2
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
@@ -398,7 +398,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.osx.yml
     params:
-      config: osx_arm64_openssl3
+      config: osx_arm64_
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
       - pyarrow-{no_rc_version}-py38(h[a-z0-9]+)_0_cpu.conda
@@ -412,7 +412,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.win.yml
     params:
-      config: win_64_cuda_compiler_versionNoneopenssl3
+      config: win_64_cuda_compiler_versionNone
       r_config: win_64_
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
@@ -424,7 +424,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.win.yml
     params:
-      config: win_64_cuda_compiler_versionNoneopenssl3
+      config: win_64_cuda_compiler_versionNone
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cpu.conda
       - pyarrow-{no_rc_version}-py38(h[a-z0-9]+)_0_cpu.conda
@@ -436,7 +436,7 @@ tasks:
     ci: azure
     template: conda-recipes/azure.win.yml
     params:
-      config: win_64_cuda_compiler_versionNoneopenssl3
+      config: win_64_cuda_compiler_versionNone
     artifacts:
       - libarrow-{no_rc_version}-(h[a-z0-9]+)_0_cuda.conda
       - pyarrow-{no_rc_version}-py38(h[a-z0-9]+)_0_cuda.conda
