add compiler for a test that needs it

--- a/dev/tasks/conda-recipes/arrow-cpp/meta.yaml
+++ b/dev/tasks/conda-recipes/arrow-cpp/meta.yaml
@@ -331,6 +331,8 @@ outputs:
 
     test:
       requires:
+        # test_cpp_extension_in_python requires a compiler
+        - {{ compiler("c") }}  # [unix]
         - pytest
         - pytest-lazy-fixture
         - backports.zoneinfo  # [py<39]
