--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -223,6 +223,8 @@ services:
       <<: *ccache
       ARROW_ENABLE_TIMING_TESTS:  # inherit
       ARROW_MIMALLOC: "ON"
+      GTest_SOURCE: "BUNDLED"  # Alpine's GTest is not built against
+                               # C++17 so we build from source
     volumes: &alpine-linux-volumes
       - .:/arrow:delegated
       - ${DOCKER_VOLUME_PREFIX}alpine-linux-ccache:/ccache:delegated
