--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -89,6 +89,7 @@ S3method(as_record_batch_reader,pyarrow.lib.Table)
 S3method(as_schema,Schema)
 S3method(as_schema,StructType)
 S3method(as_schema,pyarrow.lib.Schema)
+S3method(as_tibble,ArrowTabular)
 S3method(c,Array)
 S3method(c,ChunkedArray)
 S3method(c,Dataset)
@@ -489,6 +490,7 @@ importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,quantile)
 importFrom(stats,runif)
+importFrom(tibble,as_tibble)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,contains)
 importFrom(tidyselect,ends_with)
