Add new methods

--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -90,6 +90,10 @@ S3method(as_schema,Schema)
 S3method(as_schema,StructType)
 S3method(as_schema,pyarrow.lib.Schema)
 S3method(as_tibble,ArrowTabular)
+S3method(as_tibble,Dataset)
+S3method(as_tibble,RecordBatchReader)
+S3method(as_tibble,StructArray)
+S3method(as_tibble,arrow_dplyr_query)
 S3method(c,Array)
 S3method(c,ChunkedArray)
 S3method(c,Dataset)
