fix compiler dep for pyarrow-tests on linux; skip test on osx

--- a/dev/tasks/conda-recipes/arrow-cpp/meta.yaml
+++ b/dev/tasks/conda-recipes/arrow-cpp/meta.yaml
@@ -328,10 +328,10 @@ outputs:
     test:
       requires:
         # test_cpp_extension_in_python requires a compiler
-        - {{ compiler("c") }}  # [unix]
+        - {{ compiler("cxx") }}  # [linux]
         - pytest
         - pytest-lazy-fixture
-        - backports.zoneinfo  # [py<39]
+        - backports.zoneinfo     # [py<39]
         - cffi
         - cloudpickle
         - cython
@@ -364,6 +364,8 @@ outputs:
         # skip tests that raise SIGINT and crash the test suite
         {% set tests_to_skip = tests_to_skip + " or (test_csv and test_cancellation)" %}  # [linux]
         {% set tests_to_skip = tests_to_skip + " or (test_flight and test_interrupt)" %}  # [linux]
+        # cannot pass -D_LIBCPP_DISABLE_AVAILABILITY to test suite for our older macos sdk
+        {% set tests_to_skip = tests_to_skip + " or test_cpp_extension_in_python" %}      # [osx]
         # skip tests that make invalid(-for-conda) assumptions about the compilers setup
         {% set tests_to_skip = tests_to_skip + " or test_cython_api" %}                   # [unix]
         {% set tests_to_skip = tests_to_skip + " or test_visit_strings" %}                # [unix]
