Install zstdAlt for Gandiva

--- a/cpp/src/gandiva/GandivaConfig.cmake.in
+++ b/cpp/src/gandiva/GandivaConfig.cmake.in
@@ -30,6 +30,9 @@ set(ARROW_LLVM_VERSIONS "@ARROW_LLVM_VERSIONS@")
 
 include(CMakeFindDependencyMacro)
 find_dependency(Arrow)
+if(ARROW_WITH_ZSTD)
+  find_dependency(zstdAlt)
+endif()
 if(DEFINED CMAKE_MODULE_PATH)
   set(GANDIVA_CMAKE_MODULE_PATH_OLD ${CMAKE_MODULE_PATH})
 else()
