Comment VCPKG version with link to https://github.com/apache/arrow/issues/35099

--- a/.env
+++ b/.env
@@ -96,7 +96,7 @@ DEVTOOLSET_VERSION=
 # Please also update the crossbow configuration in order to keep the github
 # actions cache up to date for the macOS wheels:
 #   https://github.com/ursacomputing/crossbow/blob/master/.github/workflows/cache_vcpkg.yml
-# TODO(sjperkins): Change to an official release version
+# TODO: Update to an official release tag https://github.com/apache/arrow/issues/35099
 VCPKG="b619a233fbf7b2c9765fb4458f3ecb05bd3166e3"    # 2023.04.03
 
 # This must be updated when we update
