Define tmp_path_retention_policy value in setup.cfg

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -30,6 +30,7 @@ filterwarnings =
     error:The SparseDataFrame:FutureWarning
 # Get a debug traceback when a test takes a really long time
 faulthandler_timeout = 300
+tmp_path_retention_policy = failed
 
 [pep8]
 ignore = E211,E225,E226,E227,E402,W503,W504
