--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -173,7 +173,7 @@ jobs:
           python -m pip install \
             -r python/requirements-build.txt \
             -r python/requirements-test.txt
-          python -m pip uninstall pytest
+          python -m pip uninstall pytest --yes
           python -m pip install pytest==7.2
       - name: Build
         shell: bash
