--- a/dev/tasks/linux-packages/github.linux.yml
+++ b/dev/tasks/linux-packages/github.linux.yml
@@ -38,7 +38,7 @@ jobs:
           env.ARCHITECTURE == 'amd64'
         run: |
           df -h
-          df -h /opt/hostedtoolcache || :
+          du -hsc /opt/hostedtoolcache/*
           # 5.3GB
           sudo rm -rf /opt/hostedtoolcache/CodeQL || :
           # 1.4GB
