--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -293,6 +293,7 @@ export(call_function)
 export(cast_options)
 export(chunked_array)
 export(codec_is_available)
+export(collect.StructArray)
 export(concat_arrays)
 export(concat_tables)
 export(contains)
