--- a/cpp/src/arrow/ArrowConfig.cmake.in
+++ b/cpp/src/arrow/ArrowConfig.cmake.in
@@ -101,7 +101,7 @@ if(TARGET Arrow::arrow_static AND NOT TARGET Arrow::arrow_bundled_dependencies)
   foreach(CONFIGURATION ${arrow_static_configurations})
     string(TOUPPER "${CONFIGURATION}" CONFIGURATION)
     get_target_property(arrow_static_location Arrow::arrow_static
-                        IMPORTED_LOCATION_${CONFIGURATION})
+                        LOCATION_${CONFIGURATION})
     get_filename_component(arrow_lib_dir "${arrow_static_location}" DIRECTORY)
     set_property(TARGET Arrow::arrow_bundled_dependencies
                  APPEND
