Option to disable threading in arrow
This is useful for emscripten, where a lot of the time one doesn't have any threads. Could also be useful for any embedded ports etc.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -370,6 +370,10 @@ if(ARROW_ENABLE_TIMING_TESTS)
   add_definitions(-DARROW_WITH_TIMING_TESTS)
 endif()
 
+if(ARROW_DISABLE_THREADING)
+  add_definitions(-DARROW_DISABLE_THREADING)
+endif()
+
 if(NOT ARROW_BUILD_BENCHMARKS)
   set(NO_BENCHMARKS 1)
 else()
@@ -910,10 +914,11 @@ endif()
 # Handle platform-related libraries like -pthread
 
 set(ARROW_SYSTEM_LINK_LIBS)
-
-list(APPEND ARROW_SYSTEM_LINK_LIBS Threads::Threads)
-if(CMAKE_THREAD_LIBS_INIT)
-  string(APPEND ARROW_PC_LIBS_PRIVATE " ${CMAKE_THREAD_LIBS_INIT}")
+if(!ARROW_DISABLE_THREADING)
+  list(APPEND ARROW_SYSTEM_LINK_LIBS Threads::Threads)
+  if(CMAKE_THREAD_LIBS_INIT)
+    string(APPEND ARROW_PC_LIBS_PRIVATE " ${CMAKE_THREAD_LIBS_INIT}")
+  endif()
 endif()
 
 if(WIN32)
