--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -67,6 +67,14 @@ jobs:
             image: conda-cpp
             llvm: "14"
             runs-on: ubuntu-latest
+            title: AMD64 Conda C++ no threads
+            ubuntu: "22.04"
+            disable_threading: "ON"
+          - arch: amd64
+            clang-tools: "14"
+            image: conda-cpp
+            llvm: "14"
+            runs-on: ubuntu-latest
             title: AMD64 Conda C++
             ubuntu: "22.04"
           - arch: amd64
@@ -83,14 +91,6 @@ jobs:
             runs-on: ["self-hosted", "arm", "linux"]
             title: ARM64 Ubuntu 20.04 C++
             ubuntu: "20.04"
-          - arch: amd64
-            clang-tools: "14"
-            image: conda-cpp
-            llvm: "14"
-            runs-on: ubuntu-latest
-            title: AMD64 Conda C++ no threads
-            ubuntu: "22.04"
-            disable_threading: "ON"
     env:
       ARCH: ${{ matrix.arch }}
       CLANG_TOOLS: ${{ matrix.clang-tools }}
@@ -121,7 +121,7 @@ jobs:
         run: |
           sudo sysctl -w kernel.core_pattern="core.%e.%p"
           ulimit -c unlimited
-          archery docker run ${{ matrix.image }}
+          archery docker run --env  ${ARROW_DISABLE_THREADING:-NO}
       - name: Docker Push
         if: success() && github.event_name == 'push' && github.repository == 'apache/arrow'
         env:
