--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -121,7 +121,7 @@ jobs:
         run: |
           sudo sysctl -w kernel.core_pattern="core.%e.%p"
           ulimit -c unlimited
-          archery docker run --env  ${ARROW_DISABLE_THREADING:-NO}
+          archery docker run --env ARROW_DISABLE_THREADING=${ARROW_DISABLE_THREADING:-NO} ${{ matrix.image }}
       - name: Docker Push
         if: success() && github.event_name == 'push' && github.repository == 'apache/arrow'
         env:
