--- a/dev/tasks/tasks.yml
+++ b/dev/tasks/tasks.yml
@@ -1411,14 +1411,16 @@ tasks:
         R_PRUNE_DEPS: TRUE
       image: fedora-r-clang-sanitizer
 
-  test-debian-11-go-1.17:
+  {% for go_version in ("1.17", "1.20") %}
+  test-debian-11-go-{{ go_version }}:
     ci: azure
     template: docker-tests/azure.linux.yml
     params:
       env:
         DEBIAN: 11
-        GO: 1.17
+        GO: {{go_version}}
       image: debian-go
+  {% endfor %}
 
   test-ubuntu-default-docs:
     ci: azure
