treat it like a string

--- a/dev/tasks/tasks.yml
+++ b/dev/tasks/tasks.yml
@@ -1418,7 +1418,7 @@ tasks:
     params:
       env:
         DEBIAN: 11
-        GO: {{go_version}}
+        GO: "{{go_version}}"
       image: debian-go
   {% endfor %}
 
