add git safe dir to debian-go

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1507,6 +1507,7 @@ services:
     shm_size: *shm-size
     volumes: *debian-volumes
     command: &go-command >
+      git config --global --add safe.directory /arrow &&
       /bin/bash -c "
         /arrow/ci/scripts/go_build.sh /arrow &&
         /arrow/ci/scripts/go_test.sh /arrow"
@@ -1544,7 +1545,8 @@ services:
     shm_size: *shm-size
     volumes: *debian-volumes
     command: &go-cgo-python-command >
-        /bin/bash -c "
+      git config --global --add safe.directory /arrow &&
+      /bin/bash -c "
           /arrow/ci/scripts/go_cgo_python_test.sh /arrow"
 
   ############################# JavaScript ####################################
