use staticcheck version

--- a/dev/tasks/tasks.yml
+++ b/dev/tasks/tasks.yml
@@ -1411,7 +1411,7 @@ tasks:
         R_PRUNE_DEPS: TRUE
       image: fedora-r-clang-sanitizer
 
-  {% for go_version in ("1.17", "1.20") %}
+  {% for go_version, staticcheck in [("1.17", "v0.2.2"), ("1.20", "latest")] %}
   test-debian-11-go-{{ go_version }}:
     ci: azure
     template: docker-tests/azure.linux.yml
@@ -1419,6 +1419,7 @@ tasks:
       env:
         DEBIAN: 11
         GO: "{{go_version}}"
+        STATICCHECK: "{{ staticcheck }}"
       image: debian-go
   {% endfor %}
 
