--- a/cpp/src/arrow/CMakeLists.txt
+++ b/cpp/src/arrow/CMakeLists.txt
@@ -390,6 +390,7 @@ list(APPEND
      compute/api_scalar.cc
      compute/api_vector.cc
      compute/cast.cc
+     compute/dictionary_decode.cc
      compute/exec.cc
      compute/expression.cc
      compute/function.cc
