--- a/.env
+++ b/.env
@@ -96,8 +96,7 @@ DEVTOOLSET_VERSION=
 # Please also update the crossbow configuration in order to keep the github
 # actions cache up to date for the macOS wheels:
 #   https://github.com/ursacomputing/crossbow/blob/master/.github/workflows/cache_vcpkg.yml
-# TODO: Update to an official release tag https://github.com/apache/arrow/issues/35099
-VCPKG="b619a233fbf7b2c9765fb4458f3ecb05bd3166e3"    # 2023.04.03
+VCPKG="501db0f17ef6df184fcdbfbe0f87cde2313b6ab1"    # 2023.04.15 Release
 
 # This must be updated when we update
 # ci/docker/python-wheel-windows-vs2017.dockerfile.
