--- a/cpp/src/arrow/acero/CMakeLists.txt
+++ b/cpp/src/arrow/acero/CMakeLists.txt
@@ -246,7 +246,7 @@ endif()
     target_link_libraries(arrow-acero-expression-benchmark PUBLIC arrow_acero_static)
     target_link_libraries(arrow-acero-filter-benchmark PUBLIC arrow_acero_static)
     target_link_libraries(arrow-acero-project-benchmark PUBLIC arrow_acero_static)
-    if(!gig)    
+    if(ARROW_ENABLE_THREADING)    
       target_link_libraries(arrow-acero-asof-join-benchmark PUBLIC arrow_acero_static)
     endif()
     target_link_libraries(arrow-acero-tpch-benchmark PUBLIC arrow_acero_static)
