Implement schema extraction methods and split out docs

--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -154,6 +154,10 @@ S3method(read_message,InputStream)
 S3method(read_message,MessageReader)
 S3method(read_message,default)
 S3method(row.names,ArrowTabular)
+S3method(schema,ArrowTabular)
+S3method(schema,Dataset)
+S3method(schema,RecordBatchReader)
+S3method(schema,default)
 S3method(sort,ArrowDatum)
 S3method(sort,Scalar)
 S3method(sum,ArrowDatum)
