Add schema docs to pkgdown

--- a/r/_pkgdown.yml
+++ b/r/_pkgdown.yml
@@ -206,6 +206,7 @@ reference:
 
   - title: Arrow data types and schema
     contents:
+      - schema
       - Schema
       - unify_schemas
       - infer_type
