Implement scheme.arrow_dplyr_query

--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -157,6 +157,7 @@ S3method(row.names,ArrowTabular)
 S3method(schema,ArrowTabular)
 S3method(schema,Dataset)
 S3method(schema,RecordBatchReader)
+S3method(schema,arrow_dplyr_query)
 S3method(schema,default)
 S3method(sort,ArrowDatum)
 S3method(sort,Scalar)
