--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -50,6 +50,10 @@ env:
   DOCKER_VOLUME_PREFIX: ".docker/"
 
 jobs:
+  ttest:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo ${{ github.repository }}
   ubuntu:
     name: AMD64 Ubuntu ${{ matrix.ubuntu }} R ${{ matrix.r }} Force-Tests ${{ matrix.force-tests }}
     runs-on: ubuntu-latest
