--- a/dev/tasks/conda-recipes/.ci_support/linux_ppc64le_cuda_compiler_versionNone.yaml
+++ b/dev/tasks/conda-recipes/.ci_support/linux_ppc64le_cuda_compiler_versionNone.yaml
@@ -1,5 +1,5 @@
 aws_crt_cpp:
-- 0.19.8
+- 0.20.1
 aws_sdk_cpp:
 - 1.10.57
 bzip2:
@@ -9,19 +9,23 @@ c_ares:
 c_compiler:
 - gcc
 c_compiler_version:
-- '11'
+- '12'
 cdt_name:
 - cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- None
 cuda_compiler_version:
 - None
+cuda_compiler_version_min:
+- '11.2'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '11'
+- '12'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 gflags:
@@ -29,11 +33,13 @@ gflags:
 glog:
 - '0.6'
 google_cloud_cpp:
-- 2.8.0
+- 2.10.1
 libabseil:
 - '20230125'
+libevent:
+- 2.1.12
 libgrpc:
-- '1.52'
+- '1.54'
 libprotobuf:
 - '3.21'
 lz4_c:
@@ -41,8 +47,8 @@ lz4_c:
 numpy:
 - '1.21'
 - '1.23'
-- '1.20'
-- '1.20'
+- '1.21'
+- '1.21'
 openssl:
 - '3'
 orc:
@@ -57,7 +63,7 @@ python:
 - 3.8.* *_cpython
 - 3.9.* *_cpython
 re2:
-- 2023.02.02
+- 2023.03.02
 snappy:
 - '1'
 target_platform:
@@ -69,6 +75,7 @@ ucx:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+  - cuda_compiler
   - cuda_compiler_version
   - cdt_name
   - docker_image
